--- a/src/Kurumi/UserBundle/Resources/config/validation.yml
+++ b/src/Kurumi/UserBundle/Resources/config/validation.yml
@@ -63,12 +63,15 @@ Kurumi\UserBundle\Entity\Profile:
                 message: Profile owner must be specified
                 groups: [registration,admin]
         city:
-            #- Valid: ~
+            - Valid: ~
+            #- NotBlank:
+            #    message: Please enter your city
+            #    groups: [registration]
+
+Kurumi\UserBundle\Entity\City:
+    properties:
+        name:
             - NotBlank:
                 message: Please enter your city
                 groups: [registration]
-
-#Kurumi\UserBundle\Entity\Role:
-#    properties:
-#        name: ~
 
