--- a/composer.json
+++ b/composer.json
@@ -9,23 +9,20 @@
     "minimum-stability":"dev",
     "require":{
         "php":">=5.3.2",
-        "symfony/symfony":"2.1.x-dev",
-        "doctrine/common":"2.2.2",
-        "doctrine/orm":"2.2.3",
-        "doctrine/dbal":"2.2",
-        "doctrine/doctrine-bundle":"1.0.x-dev",
+        "symfony/symfony":"2.1.*",
+        "doctrine/orm":">=2.2.3,<2.4-dev",
+        "doctrine/doctrine-bundle":"1.0.*",
         "doctrine/doctrine-fixtures-bundle":"dev-master",
-        "twig/extensions":"dev-master",
-        "symfony/assetic-bundle":"2.1.x-dev",
-        "swiftmailer/swiftmailer":"4.2.x-dev",
-        "symfony/swiftmailer-bundle":"2.1.x-dev",
-        "symfony/monolog-bundle":"2.1.x-dev",
-        "sensio/distribution-bundle":"2.1.x-dev",
-        "sensio/framework-extra-bundle":"2.1.x-dev",
-        "sensio/generator-bundle":"2.1.x-dev",
-        "jms/security-extra-bundle":"1.1.0",
-        "jms/di-extra-bundle":"1.1.x-dev",
-        "lunetics/locale-bundle":"dev-2.1-compat",
+        "twig/extensions":"1.0.*",
+        "symfony/assetic-bundle":"2.1.*",
+        "symfony/swiftmailer-bundle":"2.1.*",
+        "symfony/monolog-bundle":"2.1.*",
+        "sensio/distribution-bundle":"2.1.*",
+        "sensio/framework-extra-bundle":"2.1.*",
+        "sensio/generator-bundle":"2.1.*",
+        "jms/security-extra-bundle":"1.2.*",
+        "jms/di-extra-bundle":"1.1.*",
+        "lunetics/locale-bundle":"2.1.*",
         "friendsofsymfony/facebook-bundle":"dev-master",
         "facebook/php-sdk":"dev-master",
         "stof/doctrine-extensions-bundle":"dev-master",
@@ -35,7 +32,7 @@
         "sonata-project/intl-bundle":"dev-master",
         "sonata-project/easy-extends-bundle":"dev-master",
         "knplabs/gaufrette":"dev-master",
-        "kriswallsmith/buzz":"dev-master",
+        "kriswallsmith/buzz":"v0.7",
         "beberlei/DoctrineExtensions":"v0.1",
         "knplabs/knp-menu":"v1.1.2",
         "knplabs/knp-menu-bundle":"v1.1.0",
@@ -55,7 +52,8 @@
         "EHER/PHPUnit":"1.6",
         "oldsound/rabbitmq-bundle":"dev-master",
         "fzaninotto/faker":"v1.0.0",
-        "zendframework/zend-paginator":"2.0.*"
+        "zendframework/zend-paginator":"2.0.*",
+        "hwi/oauth-bundle":"dev-master"
     },
     "repositories":[
         {
@@ -187,7 +185,6 @@
                 }
             }
         }
-
     ],
     "scripts":{
         "post-install-cmd":[
