--- a/src/Kurumi/UserBundle/Resources/config/services.yml
+++ b/src/Kurumi/UserBundle/Resources/config/services.yml
@@ -73,13 +73,31 @@ services:
             - unknown: %unknown_avatar_gallery_id%
               male: %male_avatar_gallery_id%
               female: %female_avatar_gallery_id%
+    user_search_info_provider:
+        class: Kurumi\UserBundle\User\SearchInfoProvider
+    twig.extension.user_search_info_provider:
+        class: Kurumi\UserBundle\Twig\Extension\UserSearchInfoProvider
+        arguments: [ @user_search_info_provider ]
+        tags:
+            - { name: twig.extension }
     twig.extension.user_picture_provider:
         class: Kurumi\UserBundle\Twig\Extension\UserPictureProvider
         arguments: [@user_picture_provider]
         tags:
             - { name: twig.extension }
     kernel.listener.nodejs_authenticator:
-            class: Kurumi\UserBundle\EventListener\NodejsAuthenticationListener
-            arguments: [ @nodejs.authenticator, @security.context, @javascript_settings_container ]
-            tags:
-                - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
+        class: Kurumi\UserBundle\EventListener\NodejsAuthenticationListener
+        arguments: [ @nodejs.authenticator, @security.context, @javascript_settings_container ]
+        tags:
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
+    kernel.listener.user_activity:
+        class: Kurumi\UserBundle\EventListener\UserActivityListener
+        arguments: [ @doctrine.orm.default_entity_manager, @security.context ]
+        tags:
+            - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
+            - { name: kernel.event_listener, event: security.interactive_login, method: onSecurityInteractiveLogin }
+    kernel.listener.account_info:
+        class: Kurumi\UserBUndle\EventListener\AccountInfoListener
+        arguments: [ @security.context, @router ]
+        tags:
+            - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest, priority: -32 }
