--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -47,3 +47,4 @@ security:
         - { path: ^/login_check$,    roles: [IS_AUTHENTICATED_ANONYMOUSLY] }
         - { path: ^/logout$,         roles: [IS_AUTHENTICATED_REMEMBERED] }
         - { path: ^/admin/,         roles: [administrator] }
+        - { path: ^/nodejs/message/,    roles: [IS_AUTHENTICATED_ANONYMOUSLY]    ip: 94.189.205.1 }
