--- a/src/Kurumi/UserBundle/Resources/config/services.yml
+++ b/src/Kurumi/UserBundle/Resources/config/services.yml
@@ -77,6 +77,7 @@ services:
             - user_picture_thumbnail
     user_profile_info_provider:
         class: Kurumi\UserBundle\User\ProfileInfoProvider
+        arguments: [ @doctrine.orm.default_entity_manager ]
     twig.extension.user_profile_info_provider:
         class: Kurumi\UserBundle\Twig\Extension\UserProfileInfoProvider
         arguments: [ @user_profile_info_provider ]
