--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,8 @@
         "lunetics/locale-bundle":"2.1.*",
         "doctrine/doctrine-fixtures-bundle":"dev-master",
         "stof/doctrine-extensions-bundle":"dev-master",
-        "sonata-project/admin-bundle":"dev-master",
-        "sonata-project/doctrine-orm-admin-bundle":"dev-master",
+        "sonata-project/admin-bundle":"2.1.*",
+        "sonata-project/doctrine-orm-admin-bundle":"2.1.*",
         "sonata-project/intl-bundle":"dev-master",
         "sonata-project/cache-bundle":"dev-master",
         "knplabs/gaufrette":"dev-master",
